tests/NormalTests/paczka2/big_fuzzy/55467768.err
Error in line 1: vJrRLoPPbmP S606 83,9
Error in line 10: WFBw A466 29,4
Error in line 23: A9cF7 S308 62,9
Error in line 33: WFBw A466 72,0
Error in line 42: 6rq A466 194,1
Error in line 49: A9cF7 S308 49,3
Error in line 45: A466 S308 216,8
Error in line 56: vJrRLoPPbmP A466 20,1
Error in line 65: A466 S308 -5,5
Error in line 63: A466 S308 89,3
Error in line 68: A9cF7 S217 21,0
Error in line 74: A466 S308 58,4
Error in line 90: 6rq S606 40,0
Error in line 92: eFZGh99uf S606 419,5
Error in line 95: A466 S308 78,5
Error in line 99: A466 A466 30,3
Error in line 104: vJrRLoPPbmP S606 79,11
Error in line 112: 6rq S217 35,4
Error in line 117: 6rq S606 56,2
Error in line 120: A466 A466 57,1
Error in line 122: 6rq S308 74,2
Error in line 131: A9cF7 S308 96,4
Error in line 132: A9cF7 A466 12,5
Error in line 133: A9cF7 S606 9,7
Error in line 135: 6rq S308 74,0
Error in line 149: WFBw S606 87,2
Error in line 152: A9cF7 S606 36,3
Error in line 165: 6rq S308 3,3
Error in line 170: vJrRLoPPbmP A466 10,1
Error in line 171: vJrRLoPPbmP S308 3,0
Error in line 166: 6rq S606 17,7
Error in line 186: WFBw A466 60,06
Error in line 179: yFSl S606 55,4
Error in line 185: WFBw S606 48,3
Error in line 191: WFBw S308 69,0
Error in line 201: A466 S308 -1,4
Error in line 204: vJrRLoPPbmP S606 7,1
Error in line 211: eFZGh99uf S217 89,5
Error in line 217: 6rq S217 158,5
Error in line 226: A9cF7 A466 56,8
